--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets\css\styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia aliquid hic cupiditate nihil consequuntur quae corrupti libero suscipit placeat perferendis, est itaque tempora molestiae veniam velit temporibus assumenda fugit.</p>
             </div>
             <div class="intro-img">
-                <img src="assets/img/imagemhtml.svg" alt="desenho de homem observando logo html e css">
+                <img src="img/imagemhtml.svg" alt="desenho de homem observando logo html e css">
             </div>
         </div>
     </section>
@@ -207,7 +207,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia aliquid hic cupiditate nihil consequuntur quae corrupti libero suscipit placeat perferendis, est itaque tempora molestiae veniam velit temporibus assumenda fugit.</p>
         </div>
         <div class="intro-img">
-            <img src="assets/img/fundo contate.svg" alt="mulher andando e e-mail">
+            <img src="img/fundo contate.svg"
+            alt="mulher andando e e-mail">
         </div>
         
         <div class="contate-form">
